# DesktopCropper

./: CMakeLists.txt  Control.cpp  Control.h  DrawArea.cpp  DrawArea.h  MonitorConfig.cpp  MonitorConfig.h  Rect.cpp  Rect.h  main.cpp  main_window.glade
